# leafy-bank-backend-capitalmarkets-loaders

./: .drone.yml  Dockerfile.backend  README.md  docker-compose.yml
backend/: loader_scheduler.py  loader_service.py  main.py  pyproject.toml
backend/loaders/: base_extract.py  binance_api_backup.py  binance_api_cleaner.py  binance_api_extract.py  binance_api_load.py  binance_api_transform.py  coingecko_stablecoin_market_cap.py  financial_news_cleaner.py  financial_news_embeddings.py  financial_news_recreate_embeddings.py  financial_news_scraper.py  financial_news_sentiment_score.py  generic_scraper.py  loader_scheduler.py  news_scraper.py  portfolio_performance_load.py  pyfredapi_etl_test.py  pyfredapi_macroindicators_extract.py  pyfredapi_macroindicators_load.py  pyfredapi_macroindicators_transform.py  subreddit_praw_cleaner.py  subreddit_praw_embedder.py  subreddit_praw_sentiment.py  subreddit_praw_wrapper.py  yfinance_tickers_2weeks.py  yfinance_tickers_backup.py  yfinance_tickers_cleaner.py  yfinance_tickers_extract.py  yfinance_tickers_load.py  yfinance_tickers_scheduler.py  yfinance_tickers_transform.py
backend/loaders/backup/: agentic_capital_markets.pyfredapiMacroeconomicIndicators.json  bkp_agentic_capital_markets.financial_news.csv  bkp_day_data_AAPL.json  bkp_day_data_ADA.json  bkp_day_data_BTC.json  bkp_day_data_DOGE.json  bkp_day_data_EEM-USD.json  bkp_day_data_EEM.json  bkp_day_data_ETH.json  bkp_day_data_FDUSD.json  bkp_day_data_GLD-USD.json  bkp_day_data_GLD.json  bkp_day_data_HYG-USD.json  bkp_day_data_HYG.json  bkp_day_data_LQD-USD.json  (+16 more)
(+49 files in other folders)
